--- a/Raman/Raman/Raman.csproj
+++ b/Raman/Raman/Raman.csproj
@@ -33,8 +33,13 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="NLog, Version=5.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+          <HintPath>..\packages\NLog.5.2.4\lib\net46\NLog.dll</HintPath>
+        </Reference>
         <Reference Include="System"/>
+        <Reference Include="System.Configuration" />
         <Reference Include="System.Core"/>
+        <Reference Include="System.IO.Compression" />
         <Reference Include="System.Xml.Linq"/>
         <Reference Include="System.Data.DataSetExtensions"/>
         <Reference Include="Microsoft.CSharp"/>
@@ -52,6 +57,7 @@
         <Compile Include="Controls\RamanForm.Designer.cs">
           <DependentUpon>RamanForm.cs</DependentUpon>
         </Compile>
+        <Compile Include="Core\AppException.cs" />
         <Compile Include="Core\DataPoint.cs" />
         <Compile Include="Core\FileReader.cs" />
         <Compile Include="Program.cs"/>
@@ -68,6 +74,7 @@
             <AutoGen>True</AutoGen>
             <DependentUpon>Resources.resx</DependentUpon>
         </Compile>
+        <None Include="packages.config" />
         <None Include="Properties\Settings.settings">
             <Generator>SettingsSingleFileGenerator</Generator>
             <LastGenOutput>Settings.Designer.cs</LastGenOutput>
