--- a/Raman/Raman/Raman.csproj
+++ b/Raman/Raman/Raman.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Core\Canvas.cs" />
     <Compile Include="Core\Chart.cs" />
     <Compile Include="Core\IDrawable.cs" />
+    <Compile Include="Core\Drawer.cs" />
     <Compile Include="Core\Point.cs" />
     <Compile Include="Core\FileReader.cs" />
     <Compile Include="Program.cs" />
