--- a/Raman/Raman/Raman.csproj
+++ b/Raman/Raman/Raman.csproj
@@ -61,7 +61,7 @@
     <Compile Include="Core\AppException.cs" />
     <Compile Include="Core\Point.cs" />
     <Compile Include="Core\FileReader.cs" />
-    <Compile Include="Drawing\Canvas.cs">
+    <Compile Include="Drawing\CanvasPanel.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Drawing\CanvasOld.cs" />
