--- a/Raman/Raman.Test/Raman.Test.csproj
+++ b/Raman/Raman.Test/Raman.Test.csproj
@@ -55,7 +55,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FileReaderTest.cs" />
+    <Compile Include="OnePointPerLineFileReaderTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
