--- a/Raman/Raman/Raman.csproj
+++ b/Raman/Raman/Raman.csproj
@@ -65,8 +65,9 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Core\AppException.cs" />
+    <Compile Include="Core\OnePointPerLineFileWriter.cs" />
     <Compile Include="Core\Point.cs" />
-    <Compile Include="Core\FileReader.cs" />
+    <Compile Include="Core\OnePointPerLineFileReader.cs" />
     <Compile Include="Drawing\CanvasCoordSystem.cs" />
     <Compile Include="Drawing\CanvasDrawer.cs" />
     <Compile Include="Drawing\CanvasPanel.cs">
