Remove AdvancedBaselineCorrector.cs

--- a/Raman/Raman/Raman.csproj
+++ b/Raman/Raman/Raman.csproj
@@ -73,13 +73,12 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Core\AppException.cs" />
-    <Compile Include="Core\AdvancedBaselineCorrector.cs" />
     <Compile Include="Core\ExceptionFormatter.cs" />
     <Compile Include="Core\Extensions.cs" />
     <Compile Include="Core\OnePointPerLineFileWriter.cs" />
     <Compile Include="Core\Point.cs" />
     <Compile Include="Core\OnePointPerLineFileReader.cs" />
-    <Compile Include="Core\SimpleBaselineCorrector.cs" />
+    <Compile Include="Core\BaselineCorrector.cs" />
     <Compile Include="Core\SplineBaselineCalculator.cs" />
     <Compile Include="Core\Util.cs" />
     <Compile Include="Drawing\BaselineCorrectionLayer.cs" />
