--- a/Raman/Raman/Raman.csproj
+++ b/Raman/Raman/Raman.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Controls\PeakAnalysisForm.Designer.cs">
       <DependentUpon>PeakAnalysisForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Core\AppConstants.cs" />
     <Compile Include="Core\AppException.cs" />
     <Compile Include="Core\ExceptionFormatter.cs" />
     <Compile Include="Core\ExportedPeak.cs" />
