--- a/Raman/Raman/Raman.csproj
+++ b/Raman/Raman/Raman.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Drawing\LayerBase.cs" />
     <Compile Include="Drawing\Mark.cs" />
     <Compile Include="Drawing\PeakAnalysisLayer.cs" />
+    <Compile Include="Drawing\PeakToRemoveCalculator.cs" />
     <Compile Include="Drawing\StatusStripLayer.cs" />
     <Compile Include="Drawing\XAxis.cs" />
     <Compile Include="Drawing\YAxis.cs" />
