--- a/Raman/Raman/Raman.csproj
+++ b/Raman/Raman/Raman.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Drawing\StatusStripLayer.cs" />
     <Compile Include="Drawing\XAxis.cs" />
     <Compile Include="Drawing\YAxis.cs" />
+    <Compile Include="Drawing\ZeroYLevel.cs" />
     <Compile Include="Drawing\ZoomToWindowLayer.cs" />
     <Compile Include="GlobalUsings.cs" />
     <Compile Include="Program.cs" />
