--- a/Raman/Raman/Raman.csproj
+++ b/Raman/Raman/Raman.csproj
@@ -112,18 +112,6 @@
     <Compile Include="Controls\AppStatusStrip.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\BaselineCorrectionForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Controls\BaselineCorrectionForm.Designer.cs">
-      <DependentUpon>BaselineCorrectionForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\CutOffForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Controls\CutOffForm.Designer.cs">
-      <DependentUpon>CutOffForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Controls\ErrorForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -137,75 +125,73 @@
     <Compile Include="Controls\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controls\PeakAnalysisForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Controls\PeakAnalysisForm.Designer.cs">
-      <DependentUpon>PeakAnalysisForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Controls\SpectrumSelectionForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Controls\SpectrumSelectionForm.Designer.cs">
-      <DependentUpon>SpectrumSelectionForm.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Controls\StatusStripLayer.cs" />
     <Compile Include="Core\AppConstants.cs" />
     <Compile Include="Core\AppException.cs" />
     <Compile Include="Core\AppSettings.cs" />
+    <Compile Include="Core\Chart.cs" />
+    <Compile Include="Core\ClosestChartCalculator.cs" />
     <Compile Include="Core\ExceptionFormatter.cs" />
     <Compile Include="Core\Extensions.cs" />
     <Compile Include="Core\Global.cs" />
     <Compile Include="Core\Line.cs" />
-    <Compile Include="Core\MultiSpectrumFileReader.cs" />
-    <Compile Include="Core\OnePointPerLineFileWriter.cs" />
     <Compile Include="Core\Peak.cs" />
-    <Compile Include="Core\PeakAnalysisExporter.cs" />
     <Compile Include="Core\ValuePoint.cs" />
-    <Compile Include="Core\SingleSpectrumFileReader.cs" />
-    <Compile Include="Core\BaselineCorrector.cs" />
-    <Compile Include="Core\SplineBaselineCalculator.cs" />
     <Compile Include="Core\Util.cs" />
-    <Compile Include="Drawing\BaselineCorrectionLayer.cs" />
     <Compile Include="Drawing\CanvasCoordSystem.cs" />
     <Compile Include="Drawing\CanvasDrawer.cs" />
     <Compile Include="Drawing\CanvasPanel.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Drawing\Chart.cs" />
-    <Compile Include="Drawing\ClosestChartCalculator.cs" />
     <Compile Include="Drawing\CoordSystemCalculator.cs" />
-    <Compile Include="Drawing\CutOffLayer.cs" />
     <Compile Include="Drawing\LayerBase.cs" />
     <Compile Include="Drawing\Mark.cs" />
-    <Compile Include="Drawing\MouseZoomLayer.cs" />
-    <Compile Include="Drawing\PeakAnalysisLayer.cs" />
-    <Compile Include="Drawing\PeakToRemoveCalculator.cs" />
-    <Compile Include="Drawing\StatusStripLayer.cs" />
     <Compile Include="Drawing\XAxis.cs" />
     <Compile Include="Drawing\YAxis.cs" />
     <Compile Include="Drawing\ZeroYLevel.cs" />
-    <Compile Include="Drawing\ZoomToWindowLayer.cs" />
+    <Compile Include="File\MultiSpectrumFileReader.cs" />
+    <Compile Include="File\OnePointPerLineFileWriter.cs" />
+    <Compile Include="File\SingleSpectrumFileReader.cs" />
     <Compile Include="GlobalUsings.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Controls\BaselineCorrectionForm.resx">
+    <Compile Include="Tools\BaselineCorrection\BaselineCorrectionForm.cs" />
+    <Compile Include="Tools\BaselineCorrection\BaselineCorrectionForm.Designer.cs">
       <DependentUpon>BaselineCorrectionForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Controls\CutOffForm.resx">
+    </Compile>
+    <Compile Include="Tools\BaselineCorrection\BaselineCorrectionLayer.cs" />
+    <Compile Include="Tools\BaselineCorrection\BaselineCorrector.cs" />
+    <Compile Include="Tools\BaselineCorrection\SplineBaselineCalculator.cs" />
+    <Compile Include="Tools\CutOff\CutOffForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tools\CutOff\CutOffForm.Designer.cs">
       <DependentUpon>CutOffForm.cs</DependentUpon>
-    </EmbeddedResource>
+    </Compile>
+    <Compile Include="Tools\CutOff\CutOffLayer.cs" />
+    <Compile Include="Tools\PeakAnalysis\PeakAnalysisExporter.cs" />
+    <Compile Include="Tools\PeakAnalysis\PeakAnalysisForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Tools\PeakAnalysis\PeakAnalysisForm.Designer.cs">
+      <DependentUpon>PeakAnalysisForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tools\PeakAnalysis\PeakAnalysisLayer.cs" />
+    <Compile Include="Tools\PeakAnalysis\PeakToRemoveCalculator.cs" />
+    <Compile Include="View\MouseZoomLayer.cs" />
+    <Compile Include="View\SpectrumSelectionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\SpectrumSelectionForm.Designer.cs">
+      <DependentUpon>SpectrumSelectionForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\ZoomToWindowLayer.cs" />
     <EmbeddedResource Include="Controls\ErrorForm.resx">
       <DependentUpon>ErrorForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
       <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Controls\PeakAnalysisForm.resx">
-      <DependentUpon>PeakAnalysisForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Controls\SpectrumSelectionForm.resx">
-      <DependentUpon>SpectrumSelectionForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -217,6 +203,18 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Tools\BaselineCorrection\BaselineCorrectionForm.resx">
+      <DependentUpon>BaselineCorrectionForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools\CutOff\CutOffForm.resx">
+      <DependentUpon>CutOffForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools\PeakAnalysis\PeakAnalysisForm.resx">
+      <DependentUpon>PeakAnalysisForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\SpectrumSelectionForm.resx">
+      <DependentUpon>SpectrumSelectionForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
