--- a/Raman/Raman/Raman.csproj
+++ b/Raman/Raman/Raman.csproj
@@ -130,8 +130,8 @@
     <Compile Include="Core\AppException.cs" />
     <Compile Include="Core\AppSettings.cs" />
     <Compile Include="Core\PeakAreaCalculator.cs" />
-    <Compile Include="Core\Chart.cs" />
-    <Compile Include="Core\ClosestChartCalculator.cs" />
+    <Compile Include="Core\Spectrum.cs" />
+    <Compile Include="Core\ClosestSpectrumCalculator.cs" />
     <Compile Include="Core\ExceptionFormatter.cs" />
     <Compile Include="Core\Extensions.cs" />
     <Compile Include="Core\Global.cs" />
